Fix sidebar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,9 @@ p {
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .social button {
